[package]
name = "github-rust-actions"
description = "GitHub actions for Rust written in Rust and compiled to WebAssembly"
version = "0.1.0"
repository = "https://github.com/FrancisRussell/github-rust-actions"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cargo_metadata = "0.15.1"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.55"
parking_lot = "0.12.1"
regex = { version = "1.7.0", default_features = false, features = [ "std" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0.87"
shlex = "1.1.0"
thiserror = "1.0.23"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.33"
target-lexicon = "0.12.5"
base64 = "0.13.1"
async-recursion = "1.0.0"

[dependencies.rust-toolchain-manifest]
git = "https://github.com/FrancisRussell/rust-toolchain-manifest.git"
rev = "3a77eff700ba61a4ac4e59f06b761702287fd209"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
