[package]
name = "ferrous-actions"
description = "GitHub actions for Rust written in Rust and compiled to WebAssembly"
version = "0.1.0-beta.1"
repository = "https://github.com/FrancisRussell/ferrous-actions-dev"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
async-recursion = "1.0.0"
async-trait = "0.1.59"
base64 = "0.21.0"
blake3 = { version = "1.3.3", default-features = false }
cargo_metadata = "0.15.1"
chrono = { version = "0.4.23", default-features = false, features = ["wasmbind", "std", "clock"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
derivative = "2.2.0"
futures = { version = "0.3.25", default-features = false, features = [ "std" ]}
humantime = "2.1.0"
itertools = "0.10.5"
js-sys = "0.3.55"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
postcard = { version = "1.0.2", default-features = false, features = ["use-std"] }
regex = { version = "1.7.0", default-features = false, features = [ "std" ] }
serde_json = "1.0.87"
serde = { version = "1.0", features = [ "derive" ] }
shlex = "1.1.0"
strum = { version = "0.24.1", features = ["derive"] }
target-lexicon = "0.12.5"
thiserror = "1.0.23"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen-test = "0.3"

[dependencies.rustup-toolchain-manifest]
git = "https://github.com/FrancisRussell/rustup-toolchain-manifest.git"
rev = "ecc0cd3c43b4dd1ccfb384830e18b86a3aafbc83"
version = "0.2.0"

[dependencies.simple-path-match]
git = "https://github.com/FrancisRussell/simple-path-match.git"
rev = "cbd26caad605a61861c4af754ada38166790b593"
version = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "s"
